--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,20 @@
 # Python
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+*.pyc
+.mypy_cache/
+.ruff_cache/
+.pytest_cache/
 
-# Virtual environments
-.env
+# Virtual envs and caches
 .venv/
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.cache/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Project outputs
+audio_outputs/
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# MyPy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pytest
-.pytest_cache/
-
-# Coverage
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Audio output files (generated content)
-audio_outputs/*.wav
-
-# Temporary files
-*.tmp
-*.bak
-
-# Local configuration
-.env.local
-
-# Claude Code
+# Local AI tooling
 .claude/
